<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mysticmountain"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="45dp" />


    <TextView
        android:id="@+id/emailPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailPrompt"
        android:textSize="25dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="2dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/passwordPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordPrompt"
        android:textSize="25dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:text="@string/loginButton"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/passwordCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Save Password"
            android:textColor="@color/white" />
    </LinearLayout>
    <Button
        android:id="@+id/helpLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:text="@string/helpAlert"
        android:textColor="@color/black" />
</LinearLayout>