<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ImageFragment"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/imageTitle"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageForFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fragmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageDate"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragmentExplanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageExplanation"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragmentURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageURL"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/fragmentHdURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageHdURL"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>