<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pleiades"
    tools:context=".Dashboard"
    tools:openDrawer="start">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="2dp"    >

    <include
        layout="@layout/activity_main_toolbar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/totalPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/totalPhotos"/>

    <TextView
        android:id="@+id/lastLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/lastLogin"/>

</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/material_on_background_disabled"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header_layout"
        app:itemBackground="@color/black"
        app:itemTextColor="@color/white"
        app:menu="@menu/nav_drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>