<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchImage"
    tools:openDrawer="start">

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="5dp"
    android:orientation="vertical"
    android:background="@color/black">
    <include layout="@layout/activity_main_toolbar"
        />

    <TextView
        android:id="@+id/searchImageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/searchImageTitle"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/searchImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_margin="2dp" />

    <TextView
        android:id="@+id/searchImageName"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/searchImageDate"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/searchImageURL"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/searchImageHdURL"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/searchImageExplanation"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/downloadProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/searchImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:layout_margin="2dp"
            android:text="@string/searchImageButton"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/saveImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:visibility="invisible"
            android:backgroundTint="@color/light_grey"
            android:text="@string/saveImageButton"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/material_on_background_disabled"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header_layout"
        app:itemBackground="@color/black"
        app:itemTextColor="@color/white"
        app:menu="@menu/nav_drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>